--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .Logo-principal {
     height: 200px;
 }
@@ -16,6 +22,14 @@ button {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: bold;
+    margin-top: 30px;
+}
+
+button:hover {
+    opacity: 70%;
+    width: 210px;
+    height: 55px;
+    transition: 0.4s ease-in-out;
 }
 
 body {
@@ -41,5 +55,89 @@ body {
 }
 
 video {
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+.mascara {
+    height: 100vh;
     width: 100vw;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+    position: fixed;
+    top: 0;
+}
+
+p {
+    color: white;
+    padding-top: 10px;
+    line-height: 30px;
+}
+
+.link-wapp img {
+    height: 60px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+.header img {
+    height: 60px;
+}
+
+.header a {
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.header a:hover {
+    color: #C51111;
+    font-size: 27px;
+    transition: 0.4s ease-in-out;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin: 30px;
+}
+
+.formulario-fale-conosco {
+    background-color: white;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    position: fixed;
+    padding: 20px;
+    border-radius: 5px;
+    top: 30%;
+    left: -300px;
+}
+
+input {
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid;
+    padding-left: 5px;
+    outline-color: #18D80F;
+}
+
+textarea {
+    width: 270px;
+    height: 100px;
+    border-radius: 5px;
+    border: 1px solid;
+    padding-left: 5px;
+    outline-color: #18D80F;
+}
+
+.mascara-formulario {
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
 }
