--- a/style.css
+++ b/style.css
@@ -144,3 +144,29 @@ textarea {
     background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
     transition: visibility 1s ease-in-out;
 }
+
+@media(max-width:1000px) {
+    p {
+        display: none;
+    }
+
+    .caixa-mae {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .container1 {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .Logo-Mario-Luigi {
+        width: 80vw;
+        height: auto;
+    }
+
+    .header {
+        align-items: center;
+    }
+}
